--- a/12 webSederhana3/webSederhana3.html
+++ b/12 webSederhana3/webSederhana3.html
@@ -66,7 +66,7 @@
         </div>
         <div class="sidebar">
           <h3>Tentang Penulis</h3>
-          <img src="./image/screenshot2.jpg" alt="rusak" />
+          <img src="../image/screenshot2.jpg" alt="rusak" />
           <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo vero
             dolor necessitatibus aperiam voluptates, ipsam aut nihil quos in,
